--- a/about-us.html
+++ b/about-us.html
@@ -492,63 +492,63 @@
 			</section>
 			<section class="a-gallery" data-aos="fade-down">
 				<div class="a-gallery__card">
-					<a data-fslightbox="gallery" href="img/gallery-1.jpg" class="a-gallery__link">
-						<img src="img/gallery-1.jpg" alt="бом бом" />
+					<a data-fslightbox="gallery" href="img/gallery-1.jpg">
+						<img src="img/gallery-1.jpg" alt="lazer" />
 					</a>
 				</div>
 				<div class="a-gallery__card">
-					<a data-fslightbox="gallery" href="img/gallery-2.jpg" class="a-gallery__link">
-						<img src="img/gallery-2.jpg" alt="" />
+					<a data-fslightbox="gallery" href="img/gallery-2.jpg">
+						<img src="img/gallery-2.jpg" alt="lazer-operator" />
 					</a>
 				</div>
 				<div class="a-gallery__card">
 					<a data-fslightbox="gallery" href="img/lazer.jpg">
-						<img src="img/lazer.jpg" alt="" />
+						<img src="img/lazer.jpg" alt="lazer-working" />
 					</a>
 				</div>
 				<div class="a-gallery__card">
 					<a data-fslightbox="gallery" href="img/gallery-3.jpg">
-						<img src="img/gallery-3.jpg" alt="" />
+						<img src="img/gallery-3.jpg" alt="pipe" />
 					</a>
 				</div>
 				<div class="a-gallery__card">
 					<a data-fslightbox="gallery" href="img/gallery-4.jpg">
-						<img src="img/gallery-4.jpg" alt="" />
+						<img src="img/gallery-4.jpg" alt="pipes" />
 					</a>
 				</div>
 				<div class="a-gallery__card">
 					<a data-fslightbox="gallery" href="img/gallery-5.jpg">
-						<img src="img/gallery-5.jpg" alt="" />
+						<img src="img/gallery-5.jpg" alt="production" />
 					</a>
 				</div>
 				<div class="a-gallery__card">
 					<a data-fslightbox="gallery" href="img/gallery-6.jpg">
-						<img src="img/gallery-6.jpg" alt="" />
+						<img src="img/gallery-6.jpg" alt="draw" />
 					</a>
 				</div>
 				<div class="a-gallery__card">
 					<a data-fslightbox="gallery" href="img/metal-products.jpg">
-						<img src="img/metal-products.jpg" alt="" />
+						<img src="img/metal-products.jpg" alt="welding" />
 					</a>
 				</div>
 				<div class="a-gallery__card">
 					<a data-fslightbox="gallery" href="img/gallery-7.jpg">
-						<img src="img/gallery-7.jpg" alt="" />
+						<img src="img/gallery-7.jpg" alt="lazer-1" />
 					</a>
 				</div>
 				<div class="a-gallery__card">
 					<a data-fslightbox="gallery" href="img/grain-bucket.jpg">
-						<img src="img/grain-bucket.jpg" alt="" />
+						<img src="img/grain-bucket.jpg" alt="scoop" />
 					</a>
 				</div>
 				<div class="a-gallery__card">
 					<a data-fslightbox="gallery" href="img/decorative-cut.jpg">
-						<img src="img/decorative-cut.jpg" alt="" />
+						<img src="img/decorative-cut.jpg" alt="decorative-elements" />
 					</a>
 				</div>
 				<div class="a-gallery__card">
 					<a data-fslightbox="gallery" href="img/gallery-9.jpg">
-						<img src="img/gallery-9.jpg" alt="" />
+						<img src="img/gallery-9.jpg" alt="Individual-orders" />
 					</a>
 				</div>
 			</section>
@@ -695,14 +695,6 @@
 		</section>
 	</main>
 	<footer class="footer">
-		<div class="footer__wrapper">
-			<div class="map">
-				<iframe
-					src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1259.9652061668253!2d25.452380342753024!3d50.83245286357741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47259392610572b9%3A0x3edf65d8017ef30a!2z0KLQt9Ce0JIsINCQ0YDQvNCw0LrRgSDQnNCT!5e0!3m2!1suk!2sua!4v1673270441518!5m2!1suk!2sua"
-					width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
-					referrerpolicy="no-referrer-when-downgrade"></iframe>
-			</div>
-		</div>
 		<div class="footer__bootom">
 			<div class="container">
 				<div class="info">
@@ -730,16 +722,13 @@
 								<a href="lazer.html" class="info__link">Лазерна порізка</a>
 							</li>
 							<li class="info__item">
-								<a href="lazer.html" class="info__link">Гнуття деталей</a>
+								<a href="sheet-bending.html" class="info__link">Гнуття деталей</a>
 							</li>
 							<li class="info__item">
-								<a href="lazer.html" class="info__link">Гнуття труб</a>
+								<a href="powder-painting.html" class="info__link">Порошкове фарбування</a>
 							</li>
 							<li class="info__item">
-								<a href="lazer.html" class="info__link">Порошкове фарбування</a>
-							</li>
-							<li class="info__item">
-								<a href="lazer.html" class="info__link">Зварювальні роботи</a>
+								<a href="welding.html" class="info__link">Зварювальні роботи</a>
 							</li>
 						</ul>
 					</div>
