--- a/contacts.html
+++ b/contacts.html
@@ -147,7 +147,7 @@
 								<a href="about-us.html" class="link-hover">Про нас</a>
 							</li>
 							<li class="nav__item">
-								<a href="contacts.html" class="link-hover">Контакти</a>
+								<a href="contacts.html" class="link--active">Контакти</a>
 							</li>
 							<li class="nav__item">
 								<a href="calc.html" class="link-hover">Калькулятор металу</a>
@@ -211,7 +211,7 @@
 			<div class="container c-communication__container">
 				<article class="c-card">
 					<p class="c-card__title">Телефон:</p>
-					<a class="link-social  c-card__text" href="tel:+380687945051">
+					<a class="link-social c-card__text" href="tel:+380687945051">
 						<svg class="c-svg" width="50" height="50">
 							<use xlink:href="#c-telephone"></use>
 						</svg>
@@ -220,17 +220,17 @@
 				</article>
 				<article class="c-card">
 					<p class="c-card__title">Адреса:</p>
-					<a class="link-social c-card__text  "
+					<a class="link-social c-card__text"
 						href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602">
 						<svg class="c-svg" width="50" height="50">
 							<use xlink:href="#c-place"></use>
 						</svg>
-						45200 м. Ківерці,<br>вул.Грушевського 26
+						45200 м. Ківерці,<br />вул.Грушевського 26
 					</a>
 				</article>
 				<article class="c-card">
 					<p class="c-card__title">Email:</p>
-					<a class="link-social  c-card__text" href="mailto:lazerarmax@gmail.com">
+					<a class="link-social c-card__text" href="mailto:lazerarmax@gmail.com">
 						<svg class="c-svg" width="50" height="50">
 							<use xlink:href="#c-email"></use>
 						</svg>
@@ -302,15 +302,12 @@
 						<div class="c-calculation__block">
 							<p class="c-calculation__title">Графік роботи:</p>
 							<div class="c-calculation__block-info">
-
 								<p class="link-social c-calculation__text">
-									<svg class="link-social--svg " width="25" height="25">
+									<svg class="link-social--svg" width="25" height="25">
 										<use xlink:href="#clock"></use>
 									</svg>Пн - Пт 8:00 - 17:00
 								</p>
 							</div>
-
-
 						</div>
 					</div>
 					<div class="c-calculation__form-container">
@@ -333,7 +330,6 @@
 				</div>
 			</div>
 		</section>
-
 	</main>
 	<footer class="footer">
 		<div class="footer__bootom">
@@ -363,16 +359,13 @@
 								<a href="lazer.html" class="info__link">Лазерна порізка</a>
 							</li>
 							<li class="info__item">
-								<a href="lazer.html" class="info__link">Гнуття деталей</a>
+								<a href="sheet-bending.html" class="info__link">Гнуття деталей</a>
 							</li>
 							<li class="info__item">
-								<a href="lazer.html" class="info__link">Гнуття труб</a>
+								<a href="powder-painting.html" class="info__link">Порошкове фарбування</a>
 							</li>
 							<li class="info__item">
-								<a href="lazer.html" class="info__link">Порошкове фарбування</a>
-							</li>
-							<li class="info__item">
-								<a href="lazer.html" class="info__link">Зварювальні роботи</a>
+								<a href="welding.html" class="info__link">Зварювальні роботи</a>
 							</li>
 						</ul>
 					</div>
@@ -382,7 +375,7 @@
 							<li class="info__item">
 								<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
 									class="link-social link--hover">
-									<svg class="link-social--svg " width="30" height="30">
+									<svg class="link-social--svg" width="30" height="30">
 										<use xlink:href="#location"></use>
 									</svg>
 									45200 м. Ківерці, вул.Грушевського 26
