--- a/services.html
+++ b/services.html
@@ -74,8 +74,7 @@
 		</symbol>
 	</svg>
 	<header class="header s-header">
-		<div class="s-header__background">
-		</div>
+		<div class="s-header__background"></div>
 		<div class="nav__social--desktop-wrap">
 			<div class="nav__social--desktop container">
 				<ul class="nav__social-list--desktop">
@@ -120,15 +119,13 @@
 			<div class="menu">
 				<button class="burger-btn"><span></span></button>
 				<h1 class="menu__title">
-					<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="" /></a>
+					<a class="menu__link-logo" href="index.html"><img class="menu__logo" src=" img/logo.png" alt="logo" /></a>
 				</h1>
 				<nav class="nav">
 					<div class="nav__inner">
 						<ul class="nav__list">
-							<li class="nav__item ">
-								<a class="link--active">
-									Металообробка
-								</a>
+							<li class="nav__item">
+								<a class="link--active"> Металообробка </a>
 							</li>
 							<li class="nav__item">
 								<a href="about-us.html" class="link-hover">Про нас</a>
@@ -186,9 +183,9 @@
 						ArmaxMG надає комплексні послуги з металообробки
 					</h1>
 					<p class="header__content-text">
-						Металообробка — це процес зміни форми необробленого металу з допомогою інструментів і
-						технологій, у результаті
-						якого ми отримаємо готову металеву деталь чи заготівку залежно від потреби.
+						Металообробка — це процес зміни форми необробленого металу з
+						допомогою інструментів і технологій, у результаті якого ми
+						отримаємо готову металеву деталь чи заготівку залежно від потреби.
 					</p>
 				</div>
 				<div class="header__form-container header__inner">
@@ -209,14 +206,16 @@
 	<main class="main">
 		<section class="section services s-services">
 			<div class="container">
-				<h3 class="section__title services__title">Наші послуги по металообробці</h3>
+				<h3 class="section__title services__title">
+					Наші послуги по металообробці
+				</h3>
 			</div>
 
 			<div class="services__container">
 				<article class="services__card" data-aos="fade-up">
 					<figure class="services__content">
 						<picture>
-							<img class="services__img" src="img/lazer.jpg" alt="1" width="300" height="200" />
+							<img class="services__img" src="img/lazer.jpg" alt="lazer" width="300" height="200" />
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
@@ -244,7 +243,7 @@
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
-								<a class="services__name-link" href="lazer.html">
+								<a class="services__name-link" href="sheet-bending.html">
 									Гнуття деталей
 								</a>
 							</div>
@@ -254,10 +253,10 @@
 									листового металу є виготовлення виробів із зігнутих листових
 									деталей.
 								</h4>
-								<a class="services__hover-text" href="lazer.html">
+								<a class="services__hover-text" href="sheet-bending.html">
 									<span class="services__hover--circle">Детальніше</span>
 								</a>
-								<a class="services__link" href="lazer.html"></a>
+								<a class="services__link" href="sheet-bending.html"></a>
 							</div>
 						</figcaption>
 					</figure>
@@ -265,11 +264,11 @@
 				<article class="services__card" data-aos="fade-up">
 					<figure class="services__content">
 						<picture>
-							<img class="services__img" src="img/powder-painting.jpg" alt="lazer" width="300" height="200" />
+							<img class="services__img" src="img/powder-painting.jpg" alt="painting" width="300" height="200" />
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
-								<a class="services__name-link" href="lazer.html">
+								<a class="services__name-link" href="dyeing.html">
 									Порошкове фарбування
 								</a>
 							</div>
@@ -279,10 +278,10 @@
 									якість покриття., зберігає відмінні фізико-хімічні та
 									оздоблювальні характеристики.
 								</h4>
-								<a class="services__hover-text" href="lazer.html">
+								<a class="services__hover-text" href="dyeing.html">
 									<span class="services__hover--circle">Детальніше</span>
 								</a>
-								<a class="services__link" href="lazer.html"></a>
+								<a class="services__link" href="dyeing.html"></a>
 							</div>
 						</figcaption>
 					</figure>
@@ -290,24 +289,26 @@
 				<article class="services__card" data-aos="fade-up">
 					<figure class="services__content">
 						<picture>
-							<img class="services__img" src="img/metal-products.jpg" alt="lazer" width="300" height="200" />
+							<img class="services__img" src="img/metal-products.jpg" alt="welding" width="300" height="200" />
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
-								<a class="services__name-link" href="lazer.html">
+								<a class="services__name-link" href="welding.html">
 									Зварювання деталей
 								</a>
 							</div>
 							<div class="services__hover-content">
 								<h4 class="services__hover-title">
-									Зварювання металу — це процес сплавлення двох металевих частин разом, із застосуванням тепла та тиску
-									для утворення міцного зв’язку металу. Тепло генерується електричною дугою або полум’ям, а тиск
-									прикладається за допомогою зварювального інструменту.
+									Зварювання металу — це процес сплавлення двох металевих
+									частин разом, із застосуванням тепла та тиску для утворення
+									міцного зв’язку металу. Тепло генерується електричною дугою
+									або полум’ям, а тиск прикладається за допомогою
+									зварювального інструменту.
 								</h4>
-								<a class="services__hover-text" href="lazer.html">
+								<a class="services__hover-text" href="welding.html">
 									<span class="services__hover--circle">Детальніше</span>
 								</a>
-								<a class="services__link" href="lazer.html"></a>
+								<a class="services__link" href="welding.html"></a>
 							</div>
 						</figcaption>
 					</figure>
@@ -315,21 +316,22 @@
 				<article class="services__card" data-aos="fade-up">
 					<figure class="services__content">
 						<picture>
-							<img class="services__img" src="img/locksmith.jpg" alt="lazer" width="300" height="200" />
+							<img class="services__img" src="img/locksmith.jpg" alt="locksmith" width="300" height="200" />
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
-								<a class="services__name-link" href="lazer.html">
-									Слюсарні роботи
-								</a>
+								<a class="services__name-link"> Слюсарні роботи </a>
 							</div>
 							<div class="services__hover-content">
-								<h4 class="services__hover-title">Слюсарні роботи — це процес обробки металів, який зазвичай доповнює
-									інші види металообробки і доводить виріб до готового стану.</h4>
-								<a class="services__hover-text" href="lazer.html">
+								<h4 class="services__hover-title">
+									Слюсарні роботи — це процес обробки металів, який зазвичай
+									доповнює інші види металообробки і доводить виріб до
+									готового стану.
+								</h4>
+								<a class="services__hover-text">
 									<span class="services__hover--circle">Детальніше</span>
 								</a>
-								<a class="services__link" href="lazer.html"></a>
+								<a class="services__link"></a>
 							</div>
 						</figcaption>
 					</figure>
@@ -337,20 +339,22 @@
 				<article class="services__card" data-aos="fade-up">
 					<figure class="services__content">
 						<picture>
-							<img class="services__img" src="img/dev-draw.jpg" alt="lazer" width="300" height="200" />
+							<img class="services__img" src="img/dev-draw.jpg" alt="dev-draw" width="300" height="200" />
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
-								<a class="services__name-link" href="lazer.html">
+								<a class="services__name-link">
 									Розробка технічної документації
 								</a>
 							</div>
 							<div class="services__hover-content">
-								<h4 class="services__hover-title">Розробка технічної документації</h4>
-								<a class="services__hover-text" href="lazer.html">
+								<h4 class="services__hover-title">
+									Розробка технічної документації
+								</h4>
+								<a class="services__hover-text">
 									<span class="services__hover--circle">Детальніше</span>
 								</a>
-								<a class="services__link" href="lazer.html"></a>
+								<a class="services__link"></a>
 							</div>
 						</figcaption>
 					</figure>
@@ -361,7 +365,6 @@
 		<section class="calculation">
 			<div class="calculation__background"></div>
 			<div class="calculation__inner">
-
 				<div class="calculation__wrapper container">
 					<div class="calculation__content">
 						<h3 class="section__title calculation__title">
@@ -419,7 +422,6 @@
 	</main>
 
 	<footer class="footer">
-		<div class="footer__wrapper"></div>
 		<div class="footer__bootom">
 			<div class="container">
 				<div class="info">
@@ -447,16 +449,13 @@
 								<a href="lazer.html" class="info__link">Лазерна порізка</a>
 							</li>
 							<li class="info__item">
-								<a href="lazer.html" class="info__link">Гнуття деталей</a>
+								<a href="sheet-bending.html" class="info__link">Гнуття деталей</a>
 							</li>
 							<li class="info__item">
-								<a href="lazer.html" class="info__link">Гнуття труб</a>
+								<a href="powder-painting.html" class="info__link">Порошкове фарбування</a>
 							</li>
 							<li class="info__item">
-								<a href="lazer.html" class="info__link">Порошкове фарбування</a>
-							</li>
-							<li class="info__item">
-								<a href="lazer.html" class="info__link">Зварювальні роботи</a>
+								<a href="welding.html" class="info__link">Зварювальні роботи</a>
 							</li>
 						</ul>
 					</div>
