--- a/index.html
+++ b/index.html
@@ -194,9 +194,7 @@
           <form class="header__form" action="">
             <input class="input-name" type="text" placeholder="Ім'я" />
             <input class="input-number" type="tel" placeholder="Телефон" />
-            <button class="button" type="submit">
-              Надіслати
-            </button>
+            <button class="button" type="submit">Надіслати</button>
           </form>
         </div>
       </div>
@@ -212,9 +210,9 @@
         <p class="section__text">
           Надаємо комплекс послуг з обробки металу —
           <a class="preview__link" href="lazer.html">лазерна порізка,</a>
-          <a class="preview__link" href="lazer.html">гнуття деталей,</a>
-          <a class="preview__link" href="lazer.html">зварювання,</a>
-          <a class="preview__link" href="lazer.html">фарбування</a>
+          <a class="preview__link" href="sheet-bending.html">гнуття деталей,</a>
+          <a class="preview__link" href="welding.html">зварювання,</a>
+          <a class="preview__link" href="dyeing.html">фарбування</a>
           металевих виробів та форм високої складності. Виробництво деталей
           для важкої і легкої промисловості, а також складних і відповідальних
           компонентів для точного обладнання.
@@ -233,7 +231,7 @@
         <article class="services__card" data-aos="fade-up">
           <figure class="services__content">
             <picture>
-              <img class="services__img" src="img/lazer.jpg" alt="1" width="300" height="200" />
+              <img class="services__img" src="img/lazer.jpg" alt="lazer working" width="300" height="200" />
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
@@ -261,7 +259,7 @@
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
-                <a class="services__name-link" href="lazer.html">
+                <a class="services__name-link" href="sheet-bending.html">
                   Гнуття деталей
                 </a>
               </div>
@@ -271,10 +269,10 @@
                   листового металу є виготовлення виробів із зігнутих листових
                   деталей.
                 </h4>
-                <a class="services__hover-text" href="lazer.html">
+                <a class="services__hover-text" href="sheet-bending.html">
                   <span class="services__hover--circle">Детальніше</span>
                 </a>
-                <a class="services__link" href="lazer.html"></a>
+                <a class="services__link" href="sheet-bending.html"></a>
               </div>
             </figcaption>
           </figure>
@@ -282,11 +280,11 @@
         <article class="services__card" data-aos="fade-up">
           <figure class="services__content">
             <picture>
-              <img class="services__img" src="img/powder-painting.jpg" alt="lazer" width="300" height="200" />
+              <img class="services__img" src="img/powder-painting.jpg" alt="dyeing working" width="300" height="200" />
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
-                <a class="services__name-link" href="lazer.html">
+                <a class="services__name-link" href="dyeing.html">
                   Порошкове фарбування
                 </a>
               </div>
@@ -296,10 +294,10 @@
                   якість покриття., зберігає відмінні фізико-хімічні та
                   оздоблювальні характеристики.
                 </h4>
-                <a class="services__hover-text" href="lazer.html">
+                <a class="services__hover-text" href="dyeing.html">
                   <span class="services__hover--circle">Детальніше</span>
                 </a>
-                <a class="services__link" href="lazer.html"></a>
+                <a class="services__link" href="dyeing.html"></a>
               </div>
             </figcaption>
           </figure>
@@ -307,11 +305,11 @@
         <article class="services__card" data-aos="fade-up">
           <figure class="services__content">
             <picture>
-              <img class="services__img" src="img/metal-products.jpg" alt="lazer" width="300" height="200" />
+              <img class="services__img" src="img/metal-products.jpg" alt="all services" width="300" height="200" />
             </picture>
             <figcaption class="services__figcaption">
               <div class="services__name">
-                <a class="services__name-link" href="lazer.html">
+                <a class="services__name-link" href="services.html">
                   Усі послуги
                 </a>
               </div>
@@ -321,10 +319,10 @@
                   клієнтів - великих промислових підприємств, комерційних
                   організацій і виробничих фірм.
                 </h4>
-                <a class="services__hover-text" href="lazer.html">
+                <a class="services__hover-text" href="services.html">
                   <span class="services__hover--circle">Детальніше</span>
                 </a>
-                <a class="services__link" href="lazer.html"></a>
+                <a class="services__link" href="services.html"></a>
               </div>
             </figcaption>
           </figure>
@@ -403,9 +401,9 @@
           Виготовлення дрібних та складних деталей із металу, а також послуги
           з механічної обробки деталей виконуємо на верстатах з ЧПУ. Беремо в
           роботу навіть найскладніші замовлення – нестандартні
-          <a class="preview__link" href="lazer.html"> вироби з металу</a>.
-          Виконуємо великі обсяги. Ці та багато інших вироби з металу ми
-          робимо на нашому виробництві на замовлення.
+          <span class="preview__link"> вироби з металу</span>. Виконуємо
+          великі обсяги. Ці та багато інших вироби з металу ми робимо на
+          нашому виробництві на замовлення.
         </p>
 
         <div class="ware__box">
@@ -416,9 +414,7 @@
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link" href="lazer.html">
-                    Ніжки для меблів
-                  </a>
+                  <a class="ware__name-link"> Ніжки для меблів </a>
                 </div>
               </figcaption>
             </figure>
@@ -426,13 +422,12 @@
           <article class="ware__card" data-aos="zoom-in" data-aos-delay="250">
             <figure class="ware__content">
               <picture>
-                <img class="ware__img" src="img/decorative-cut.jpg" alt="table-legs" width="auto" height="220" />
+                <img class="ware__img" src="img/decorative-cut.jpg" alt="decorative-elements" width="auto"
+                  height="220" />
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link" href="lazer.html">
-                    Декоративні елементи
-                  </a>
+                  <a class="ware__name-link"> Декоративні елементи </a>
                 </div>
               </figcaption>
             </figure>
@@ -440,13 +435,11 @@
           <article class="ware__card" data-aos="zoom-in" data-aos-delay="350">
             <figure class="ware__content">
               <picture>
-                <img class="ware__img" src="img/individual.jpg" alt="table-legs" width="auto" height="220" />
+                <img class="ware__img" src="img/individual.jpg" alt="Individual-orders" width="auto" height="220" />
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link" href="lazer.html">
-                    Індивідуальні замовлення
-                  </a>
+                  <a class="ware__name-link"> Індивідуальні замовлення </a>
                 </div>
               </figcaption>
             </figure>
@@ -454,13 +447,11 @@
           <article class="ware__card" data-aos="zoom-in" data-aos-delay="150">
             <figure class="ware__content">
               <picture>
-                <img class="ware__img" src="img/grain-bucket.jpg" alt="table-legs" width="auto" height="220" />
+                <img class="ware__img" src="img/grain-bucket.jpg" alt="grain-buckets" width="auto" height="220" />
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link" href="lazer.html">
-                    Зернові ковші
-                  </a>
+                  <a class="ware__name-link"> Зернові ковші </a>
                 </div>
               </figcaption>
             </figure>
@@ -468,13 +459,11 @@
           <article class="ware__card" data-aos="zoom-in" data-aos-delay="250">
             <figure class="ware__content">
               <picture>
-                <img class="ware__img" src="img/metal-bracket.jpg" alt="table-legs" width="auto" height="220" />
+                <img class="ware__img" src="img/metal-bracket.jpg" alt="Metal-brackets" width="auto" height="220" />
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link" href="lazer.html">
-                    Металеві кронштейни
-                  </a>
+                  <a class="ware__name-link"> Металеві кронштейни </a>
                 </div>
               </figcaption>
             </figure>
@@ -482,13 +471,12 @@
           <article class="ware__card" data-aos="zoom-in" data-aos-delay="350">
             <figure class="ware__content">
               <picture>
-                <img class="ware__img" src="img/metal-furniture.jpg" alt="table-legs" width="auto" height="220" />
+                <img class="ware__img" src="img/metal-furniture.jpg" alt="Commercial-equipment" width="auto"
+                  height="220" />
               </picture>
               <figcaption class="ware__figcaption">
                 <div class="ware__name">
-                  <a class="ware__name-link" href="lazer.html">
-                    Торгове обладнання
-                  </a>
+                  <a class="ware__name-link"> Торгове обладнання </a>
                 </div>
               </figcaption>
             </figure>
@@ -511,7 +499,6 @@
         <div class="partners__slider">
           <div class="swiper">
             <div class="swiper-wrapper">
-              <!-- <div class="swiper-slide"><img src="img/modern-expo.png" alt="modern-expo" width="190" height="150"></div> -->
               <div class="swiper-slide">
                 <img src="img/skf-logo.svg" alt="skf" width="190" height="150" />
               </div>
@@ -522,10 +509,10 @@
                 <img src="img/cvg-logo.png" alt="cvg" width="190" height="190" />
               </div>
               <div class="swiper-slide">
-                <img src="img/globino-logo.png" alt="" width="190" height="180" />
+                <img src="img/globino-logo.png" alt="globino" width="190" height="180" />
               </div>
               <div class="swiper-slide">
-                <img src="img/limo-logo.png" alt="" width="190" height="180" />
+                <img src="img/limo-logo.png" alt="limo" width="190" height="180" />
               </div>
             </div>
           </div>
@@ -542,7 +529,6 @@
     <section class="calculation">
       <div class="calculation__background"></div>
       <div class="calculation__inner">
-
         <div class="calculation__wrapper container">
           <div class="calculation__content">
             <h3 class="section__title calculation__title">
@@ -599,14 +585,6 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="footer__wrapper">
-      <div class="map">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1259.9652061668253!2d25.452380342753024!3d50.83245286357741!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47259392610572b9%3A0x3edf65d8017ef30a!2z0KLQt9Ce0JIsINCQ0YDQvNCw0LrRgSDQnNCT!5e0!3m2!1suk!2sua!4v1673270441518!5m2!1suk!2sua"
-          width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
-          referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
-    </div>
     <div class="footer__bootom">
       <div class="container">
         <div class="info">
@@ -634,16 +612,13 @@
                 <a href="lazer.html" class="info__link">Лазерна порізка</a>
               </li>
               <li class="info__item">
-                <a href="lazer.html" class="info__link">Гнуття деталей</a>
+                <a href="sheet-bending.html" class="info__link">Гнуття деталей</a>
               </li>
               <li class="info__item">
-                <a href="lazer.html" class="info__link">Гнуття труб</a>
+                <a href="powder-painting.html" class="info__link">Порошкове фарбування</a>
               </li>
               <li class="info__item">
-                <a href="lazer.html" class="info__link">Порошкове фарбування</a>
-              </li>
-              <li class="info__item">
-                <a href="lazer.html" class="info__link">Зварювальні роботи</a>
+                <a href="welding.html" class="info__link">Зварювальні роботи</a>
               </li>
             </ul>
           </div>
@@ -653,7 +628,7 @@
               <li class="info__item">
                 <a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
                   class="link-social link--hover">
-                  <svg class="link-social--svg " width="30" height="30">
+                  <svg class="link-social--svg" width="30" height="30">
                     <use xlink:href="#location"></use>
                   </svg>
                   45200 м. Ківерці, вул.Грушевського 26
@@ -713,6 +688,7 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="js/index.js"></script>
   <script src="js/swiper.js"></script>
+  <script src="js/fslightbox.js"></script>
 </body>
 
 </html>
