--- a/about-us.html
+++ b/about-us.html
@@ -349,7 +349,7 @@
 					<div class="nav__inner">
 						<ul class="nav__list">
 							<li class="nav__item">
-								<a href="services.html" class="link-hover "> Металообробка </a>
+								<a href="services.html" class="link-hover"> Металообробка </a>
 							</li>
 							<li class="nav__item">
 								<a class="link--active">Про нас</a>
@@ -627,7 +627,8 @@
 							</svg>
 							<div class="a-privilege__content">
 								<p class="a-privilege__text">
-									Запуск партії виробів у роботу, згідно з термінами відвантаженн
+									Запуск партії виробів у роботу, згідно з термінами
+									відвантаженн
 								</p>
 							</div>
 						</div>
@@ -638,7 +639,6 @@
 		<section class="calculation">
 			<div class="calculation__background"></div>
 			<div class="calculation__inner">
-
 				<div class="calculation__wrapper container">
 					<div class="calculation__content">
 						<h3 class="section__title calculation__title">
@@ -725,10 +725,13 @@
 								<a href="sheet-bending.html" class="info__link">Гнуття деталей</a>
 							</li>
 							<li class="info__item">
-								<a href="powder-painting.html" class="info__link">Порошкове фарбування</a>
+								<a href="dyeing.html" class="info__link">Порошкове фарбування</a>
 							</li>
 							<li class="info__item">
 								<a href="welding.html" class="info__link">Зварювальні роботи</a>
+							</li>
+							<li class="info__item">
+								<a href="locksmith.html" class="info__link">Слюсарні роботи</a>
 							</li>
 						</ul>
 					</div>
