--- a/index.html
+++ b/index.html
@@ -615,10 +615,13 @@
                 <a href="sheet-bending.html" class="info__link">Гнуття деталей</a>
               </li>
               <li class="info__item">
-                <a href="powder-painting.html" class="info__link">Порошкове фарбування</a>
+                <a href="dyeing.html" class="info__link">Порошкове фарбування</a>
               </li>
               <li class="info__item">
                 <a href="welding.html" class="info__link">Зварювальні роботи</a>
+              </li>
+              <li class="info__item">
+                <a href="locksmith.html" class="info__link">Слюсарні роботи</a>
               </li>
             </ul>
           </div>
