--- a/services.html
+++ b/services.html
@@ -320,7 +320,9 @@
 						</picture>
 						<figcaption class="services__figcaption">
 							<div class="services__name">
-								<a class="services__name-link"> Слюсарні роботи </a>
+								<a class="services__name-link" href="locksmith.html">
+									Слюсарні роботи
+								</a>
 							</div>
 							<div class="services__hover-content">
 								<h4 class="services__hover-title">
@@ -328,10 +330,10 @@
 									доповнює інші види металообробки і доводить виріб до
 									готового стану.
 								</h4>
-								<a class="services__hover-text">
+								<a class="services__hover-text" href="locksmith.html">
 									<span class="services__hover--circle">Детальніше</span>
 								</a>
-								<a class="services__link"></a>
+								<a class="services__link" href="locksmith.html"></a>
 							</div>
 						</figcaption>
 					</figure>
@@ -452,10 +454,13 @@
 								<a href="sheet-bending.html" class="info__link">Гнуття деталей</a>
 							</li>
 							<li class="info__item">
-								<a href="powder-painting.html" class="info__link">Порошкове фарбування</a>
+								<a href="dyeing.html" class="info__link">Порошкове фарбування</a>
 							</li>
 							<li class="info__item">
 								<a href="welding.html" class="info__link">Зварювальні роботи</a>
+							</li>
+							<li class="info__item">
+								<a href="locksmith.html" class="info__link">Слюсарні роботи</a>
 							</li>
 						</ul>
 					</div>
