--- a/sheet-bending.html
+++ b/sheet-bending.html
@@ -346,7 +346,7 @@
 					<div class="nav__inner">
 						<ul class="nav__list">
 							<li class="nav__item">
-								<a href="services.html" class="link-hover">Металообробка</a>
+								<a href="services.html" class="link--active">Металообробка</a>
 							</li>
 							<li class="nav__item">
 								<a href="about-us.html" class="link-hover">Про нас</a>
@@ -704,10 +704,13 @@
 								<a href="sheet-bending.html" class="info__link">Гнуття деталей</a>
 							</li>
 							<li class="info__item">
-								<a href="powder-painting.html" class="info__link">Порошкове фарбування</a>
+								<a href="dyeing.html" class="info__link">Порошкове фарбування</a>
 							</li>
 							<li class="info__item">
 								<a href="welding.html" class="info__link">Зварювальні роботи</a>
+							</li>
+							<li class="info__item">
+								<a href="locksmith.html" class="info__link">Слюсарні роботи</a>
 							</li>
 						</ul>
 					</div>
