--- a/calc.html
+++ b/calc.html
@@ -10,10 +10,11 @@
 </head>
 
 <body class="calc__body">
-
 	<header>
 		<div class="development">
-			<p class="development-page">Вибачте, ця сторінка знаходиться на стадії розробки</p>
+			<p class="development-page">
+				Вибачте, ця сторінка знаходиться на стадії розробки
+			</p>
 			<p class="development-page">Sorry, this page is under construction</p>
 		</div>
 
@@ -25,76 +26,183 @@
 		<button onclick="showDiv('redDiv')">Червоний</button>
 		<button onclick="showDiv('blueDiv')">Синій</button>
 		<button onclick="showDiv('yellowDiv')">Жовтий</button>
-		<button onclick="showDiv('greenDiv')">Зелений</button>	
+		<button onclick="showDiv('greenDiv')">Зелений</button>
 		<a href="index.html">головна сторінка</a>
 		<div class="calc">
 			<div class="metal">
-				<button class="calc__sheet-btn calc-form-button-js" type="button" data-type="list">Лист</button>
-				<button class="calc__profile-pipe-btn calc-form-button-js" type="button" data-type="pipe">Труба
-					профільна</button>
-				<button class="calc__pipe-btn calc-form-button-js" type="button" data-type="pipe2">Труба</button>
+				<button class="calc__sheet-btn calc-form-button-js" type="button" data-type="list">
+					Лист
+				</button>
+				<button class="calc__profile-pipe-btn calc-form-button-js" type="button" data-type="pipe">
+					Труба профільна
+				</button>
+				<button class="calc__pipe-btn calc-form-button-js" type="button" data-type="pipe2">
+					Труба
+				</button>
 			</div>
 
-		
-
-			<div id="redDiv" class="calc__sheet calc-form-js" style="background-color: red; height: 100px; width: 100px; display: none;">
+			<div id="redDiv" class="calc__sheet calc-form-js" style="
+            background-color: red;
+            height: 100px;
+            width: 100px;
+            display: none;
+          ">
 				<form class="calc__form" action="">
 					<label for="length">Довжина мм
-						<input class="length" type="number">
+						<input class="length" type="number" />
 					</label>
 					<label for="width">Ширина мм
-						<input class="width" type="number">
+						<input class="width" type="number" />
 					</label>
 					<label for="weight">Товщина мм
-						<input class="weight" type="number">
+						<input class="weight" type="number" />
 					</label>
 					<div class="result">
 						<div class="result__box">
 							Вага кг
-							<p id="mass">
-							</p>
+							<p id="mass"></p>
 						</div>
 						<div class="result__box">
 							Площа м2
-							<p id="area">
-							</p>
+							<p id="area"></p>
 						</div>
 					</div>
-					<input class="calc__sheet-button" type="button" value="Розрахувати">
-
+					<input class="calc__sheet-button" type="button" value="Розрахувати" />
 				</form>
 			</div>
-			<div id="blueDiv" class="calc__profile-pipe calc-form-js" style="background-color: blue; height: 100px; width: 100px; display: none;">
+			<div id="blueDiv" class="calc__profile-pipe calc-form-js" style="
+            background-color: blue;
+            height: 100px;
+            width: 100px;
+            display: none;
+          ">
 				<form class="calc__form" action="">
 					<label for="length">Довжина труби мм
-						<input class="length" type="number">
+						<input class="length" type="number" />
 					</label>
 					<label for="width">Ширина труби мм
-						<input class="width" type="number">
+						<input class="width" type="number" />
 					</label>
 					<label for="weight">Товщина труби мм
-						<input class="weight" type="number">
+						<input class="weight" type="number" />
 					</label>
 					<div class="result">
 						<div class="result__box">
 							Вага кг
-							<p id="mass1">
-							</p>
+							<p id="mass1"></p>
 						</div>
 						<div class="result__box">
 							Площа м2
-							<p id="area1">
-							</p>
+							<p id="area1"></p>
 						</div>
 					</div>
-					<input class="calc__pipe-button" type="button" value="Розрахувати">
+					<input class="calc__pipe-button" type="button" value="Розрахувати" />
 				</form>
 			</div>
-
 		</div>
-
 	</main>
 	<footer class="footer">
+		<div class="footer__bootom">
+			<div class="container">
+				<div class="info">
+					<div class="info__block info__menu">
+						<h5 class="info__title">Меню</h5>
+						<ul>
+							<li class="info__item">
+								<a class="info__link" href="services.html">Послуги</a>
+							</li>
+							<li class="info__item">
+								<a class="info__link" href="about-us.html">Про нас</a>
+							</li>
+							<li class="info__item">
+								<a class="info__link" href="contacts.html">Контакти</a>
+							</li>
+							<li class="info__item">
+								<a class="info__link" href="calc.html">Калькуоятор металу</a>
+							</li>
+						</ul>
+					</div>
+					<div class="info__block info__schedule">
+						<h5 class="info__title">Послуги</h5>
+						<ul class="info__list">
+							<li class="info__item">
+								<a href="lazer.html" class="info__link">Лазерна порізка</a>
+							</li>
+							<li class="info__item">
+								<a href="sheet-bending.html" class="info__link">Гнуття деталей</a>
+							</li>
+							<li class="info__item">
+								<a href="dyeing.html" class="info__link">Порошкове фарбування</a>
+							</li>
+							<li class="info__item">
+								<a href="welding.html" class="info__link">Зварювальні роботи</a>
+							</li>
+							<li class="info__item">
+								<a href="locksmith.html" class="info__link">Слюсарні роботи</a>
+							</li>
+						</ul>
+					</div>
+					<div class="info__block info__address">
+						<h5 class="info__title">Адреса</h5>
+						<ul class="info__list">
+							<li class="info__item">
+								<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
+									class="link-social link--hover">
+									<svg class="link-social--svg" width="30" height="30">
+										<use xlink:href="#location"></use>
+									</svg>
+									45200 м. Ківерці, вул.Грушевського 26
+								</a>
+							</li>
+							<li class="info__item info__item--color">
+								<svg class="clock-svg" width="25" height="25">
+									<use xlink:href="#clock"></use>
+								</svg>
+								Пн - Пт 8:00 - 17:00
+							</li>
+						</ul>
+					</div>
+
+					<div class="info__block info__contact">
+						<h5 class="info__title">Наші контакти</h5>
+						<ul class="info__list">
+							<li class="info__item">
+								<a class="link-social link--hover" href="tel:+380687945051">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#phone"></use>
+									</svg>
+									+38 (096) 123 91 21
+								</a>
+							</li>
+							<li class="info__item">
+								<a class="link-social link--hover" href="tel:+380687945051">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#phone"></use>
+									</svg>
+									+38 (099) 225 50 51
+								</a>
+							</li>
+							<li class="info__item">
+								<a href="mailto:lazerarmax@gmail.com" class="link-social link--hover">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#mail"></use>
+									</svg>
+									lazer.armax@gmail.com
+								</a>
+							</li>
+							<li class="info__item">
+								<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+									<svg class="link-social--svg" width="30" height="20">
+										<use xlink:href="#facebook"></use>
+									</svg>
+									facebook.com/armaxMG/
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
 	</footer>
 	<script src="js/index.js"></script>
 </body>
