--- a/calc.html
+++ b/calc.html
@@ -5,101 +5,91 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title></title>
+	<title>ArmaxMG</title>
 	<link rel="stylesheet" href="styles/style-min.css" />
+	<link rel="preconnect" href="https://fonts.googleapis.com" />
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;700&display=swap"
+		rel="stylesheet" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+	<link rel="website icon" type="png" href="../img/pngegg.png" />
 </head>
 
-<body class="calc__body">
-	<header>
-		<div class="development">
-			<p class="development-page">
-				Вибачте, ця сторінка знаходиться на стадії розробки
-			</p>
-			<p class="development-page">Sorry, this page is under construction</p>
+<body>
+	<svg style="display: none">
+		<symbol id="location" viewBox="0 0 1024 1024">
+			<g>
+				<path
+					d="M512 64c-175.8 0-318.3 134.6-318.3 300.5 0 222.9 195.5 430.8 280.1 510.3 21.3 20.1 55.7 20.3 77.4 0.6 85.1-77.2 279.2-278.7 279.2-510.9C830.3 198.6 687.8 64 512 64z m0 401.1c-56.9 0-103.1-46.2-103.1-103.1S455.1 258.9 512 258.9c56.9 0 103.1 46.2 103.1 103.1S568.9 465.1 512 465.1z" />
+				<path d="M364.5 926.5a147.5 21.5 0 1 0 295 0 147.5 21.5 0 1 0-295 0Z" />
+			</g>
+		</symbol>
+
+		<symbol id="phone" viewBox="0 0 477.156 477.156">
+			<g>
+				<path d="M475.009,380.316l-2.375-7.156c-5.625-16.719-24.062-34.156-41-38.75l-62.688-17.125c-17-4.625-41.25,1.594-53.688,14.031
+          l-22.688,22.688c-82.453-22.28-147.109-86.938-169.359-169.375L145.9,161.94c12.438-12.438,18.656-36.656,14.031-53.656
+          l-17.094-62.719c-4.625-16.969-22.094-35.406-38.781-40.969L96.9,2.19c-16.719-5.563-40.563,0.063-53,12.5L9.962,48.659
+          C3.899,54.69,0.024,71.94,0.024,72.003c-1.187,107.75,41.063,211.562,117.281,287.781
+          c76.031,76.031,179.454,118.219,286.891,117.313c0.562,0,18.312-3.813,24.375-9.845l33.938-33.938
+          C474.946,420.878,480.571,397.035,475.009,380.316z" />
+			</g>
+		</symbol>
+
+		<symbol id="mail" viewBox="0 0 64 64">
+			<g>
+				<path
+					d="M63.125,9.977c-0.902-1.321-2.419-2.194-4.131-2.194H5.006c-1.676,0-3.158,0.842-4.067,2.117l31.16,25.982L63.125,9.977z" />
+				<path d="M0.006,14.328v36.889c0,2.75,2.25,5,5,5h53.988c2.75,0,5-2.25,5-5V14.461L32.099,41.09L0.006,14.328z" />
+			</g>
+		</symbol>
+
+		<symbol id="clock" viewBox="0 0 485.213 485.212">
+			<g>
+				<path d="M242.607,0C108.629,0,0.001,108.628,0.001,242.606c0,133.976,108.628,242.606,242.606,242.606
+          c133.978,0,242.604-108.631,242.604-242.606C485.212,108.628,376.585,0,242.607,0z M257.771,454.116v-29.557h-30.327v29.557
+          c-104.925-7.458-188.883-91.419-196.346-196.344h29.554v-30.327H31.098c7.463-104.928,91.421-188.886,196.346-196.349v29.554
+          h30.327V31.097c104.926,7.462,188.882,91.421,196.344,196.349h-29.552v30.327h29.552
+          C446.652,362.697,362.696,446.658,257.771,454.116z M354.226,178.163c2.072,3.615,0.83,8.266-2.782,10.368l-80.092,46.227
+          c0.691,2.577,1.582,5.066,1.582,7.848c0,16.762-13.581,30.324-30.326,30.324c-16.75,0-30.327-13.562-30.327-30.324l-82.299-47.503
+          c-7.257-4.203-9.743-13.474-5.554-20.729c4.174-7.285,13.459-9.771,20.715-5.565l82.775,47.798
+          c4.411-2.487,9.239-4.324,14.69-4.324c8.471,0,16.092,3.494,21.604,9.122l79.648-46.024
+          C347.416,173.277,352.064,174.521,354.226,178.163z" />
+			</g>
+		</symbol>
+
+		<symbol id="facebook" viewBox="0 0 24 24">
+			<g>
+				<path
+					d="M22.676 0H1.324C.593 0 0 .593 0 1.324v21.352C0 23.408.593 24 1.324 24h11.494v-9.294H9.689v-3.621h3.129V8.41c0-3.099 1.894-4.785 4.659-4.785 1.325 0 2.464.097 2.796.141v3.24h-1.921c-1.5 0-1.792.721-1.792 1.771v2.311h3.584l-.465 3.63H16.56V24h6.115c.733 0 1.325-.592 1.325-1.324V1.324C24 .593 23.408 0 22.676 0" />
+			</g>
+		</symbol>
+
+		<symbol id="telegram" viewBox="0 0 24 24">
+			<g>
+				<path
+					d="m9.417 15.181-.397 5.584c.568 0 .814-.244 1.109-.537l2.663-2.545 5.518 4.041c1.012.564 1.725.267 1.998-.931l3.622-16.972.001-.001c.321-1.496-.541-2.081-1.527-1.714l-21.29 8.151c-1.453.564-1.431 1.374-.247 1.741l5.443 1.693 12.643-7.911c.595-.394 1.136-.176.691.218z" />
+			</g>
+		</symbol>
+	</svg>
+
+	<main class="main">
+		<div class="file-box">
+			<div class="file__field">
+				<input type="file" name="file" id="file" />
+				<label class="file__btn" id="file_btn" for="file">Выберите файл</label>
+				<div class="file__info">
+					<div class="file__name" id="file_name"></div>
+					<div class="file__btn-close" id="file_btn_close"></div>
+				</div>
+			</div>
+			<div class="file__hint">
+				<span>Максимум 20 Мб;</span>
+				<span>В формате jpeg, jpg, png, gif, svg</span>
+			</div>
 		</div>
 
-		<svg>
-			<use xlink:href="#location"></use>
-		</svg>
-	</header>
-	<main class="main container">
-		<button onclick="showDiv('redDiv')">Червоний</button>
-		<button onclick="showDiv('blueDiv')">Синій</button>
-		<button onclick="showDiv('yellowDiv')">Жовтий</button>
-		<button onclick="showDiv('greenDiv')">Зелений</button>
-		<a href="index.html">головна сторінка</a>
-		<div class="calc">
-			<div class="metal">
-				<button class="calc__sheet-btn calc-form-button-js" type="button" data-type="list">
-					Лист
-				</button>
-				<button class="calc__profile-pipe-btn calc-form-button-js" type="button" data-type="pipe">
-					Труба профільна
-				</button>
-				<button class="calc__pipe-btn calc-form-button-js" type="button" data-type="pipe2">
-					Труба
-				</button>
-			</div>
-
-			<div id="redDiv" class="calc__sheet calc-form-js" style="
-            background-color: red;
-            height: 100px;
-            width: 100px;
-            display: none;
-          ">
-				<form class="calc__form" action="">
-					<label for="length">Довжина мм
-						<input class="length" type="number" />
-					</label>
-					<label for="width">Ширина мм
-						<input class="width" type="number" />
-					</label>
-					<label for="weight">Товщина мм
-						<input class="weight" type="number" />
-					</label>
-					<div class="result">
-						<div class="result__box">
-							Вага кг
-							<p id="mass"></p>
-						</div>
-						<div class="result__box">
-							Площа м2
-							<p id="area"></p>
-						</div>
-					</div>
-					<input class="calc__sheet-button" type="button" value="Розрахувати" />
-				</form>
-			</div>
-			<div id="blueDiv" class="calc__profile-pipe calc-form-js" style="
-            background-color: blue;
-            height: 100px;
-            width: 100px;
-            display: none;
-          ">
-				<form class="calc__form" action="">
-					<label for="length">Довжина труби мм
-						<input class="length" type="number" />
-					</label>
-					<label for="width">Ширина труби мм
-						<input class="width" type="number" />
-					</label>
-					<label for="weight">Товщина труби мм
-						<input class="weight" type="number" />
-					</label>
-					<div class="result">
-						<div class="result__box">
-							Вага кг
-							<p id="mass1"></p>
-						</div>
-						<div class="result__box">
-							Площа м2
-							<p id="area1"></p>
-						</div>
-					</div>
-					<input class="calc__pipe-button" type="button" value="Розрахувати" />
-				</form>
-			</div>
-		</div>
 	</main>
 	<footer class="footer">
 		<div class="footer__bootom">
@@ -109,7 +99,7 @@
 						<h5 class="info__title">Меню</h5>
 						<ul>
 							<li class="info__item">
-								<a class="info__link" href="services.html">Послуги</a>
+								<a class="info__link" href="poshta.html">Послуги</a>
 							</li>
 							<li class="info__item">
 								<a class="info__link" href="about-us.html">Про нас</a>
@@ -204,7 +194,7 @@
 			</div>
 		</div>
 	</footer>
-	<script src="js/index.js"></script>
+	<script src="js/app.js"></script>
 </body>
 
 </html>
