--- a/index.html
+++ b/index.html
@@ -191,10 +191,19 @@
         <div class="header__form-container header__inner">
           <h3 class="header__form-title">Надіслати запит :</h3>
 
-          <form class="header__form" action="">
-            <input class="input-name" type="text" placeholder="Ім'я" />
-            <input class="input-number" type="tel" placeholder="Телефон" />
-            <button class="button" type="submit">Надіслати</button>
+          <form class="header__form" action="send_mail.php" name="form" method="POST">
+            <input class="input-name" type="text" placeholder="Дмитро" name="name" id="name"
+              data-reg="^([A-Za-z]+|[А-ЩЬЮЯҐЄІЇа-щьюяґєії]+)$" />
+            <input class="input-number" type="text" placeholder="example@gmail.com" name="email" id="email"
+              data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" />
+
+
+            <input class="input-number" type="text" placeholder="099 575 55 51" name="phone" id="phone"
+              data-reg="^((\+380|380|0)+([0-9]){9})$" />
+
+
+            <input class="button button-form" type="submit" id="btn_send" value="Отправить" />
+
           </form>
         </div>
       </div>
@@ -687,11 +696,16 @@
       </div>
     </div>
   </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="js/index.js"></script>
+
   <script src="js/swiper.js"></script>
   <script src="js/fslightbox.js"></script>
+
+  <script src="https://kit.fontawesome.com/fce9a50d02.js" crossorigin="anonymous"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
