--- a/about-us.html
+++ b/about-us.html
@@ -357,9 +357,6 @@
 							<li class="nav__item">
 								<a href="contacts.html" class="link-hover">Контакти</a>
 							</li>
-							<li class="nav__item">
-								<a href="calc.html" class="link-hover">Калькулятор металу</a>
-							</li>
 						</ul>
 
 						<ul class="nav__list nav__list-social">
@@ -428,8 +425,8 @@
 							<div class="a-privilege__content">
 								<p class="a-privilege__title">Висока якість</p>
 								<p class="a-privilege__text">
-									Ми постійно покращуємо нашу якість і крок за кроком йдемо до
-									нових її стандартів
+									Висока якість. Дотримуємось найвищих стандартів якості у всіх аспектах бізнесу та постійно
+									вдосконалюємо процеси.
 								</p>
 							</div>
 						</div>
@@ -442,8 +439,7 @@
 							<div class="a-privilege__content">
 								<p class="a-privilege__title">Дотримуємося термінів</p>
 								<p class="a-privilege__text">
-									Ми постійно покращуємо нашу якість і крок за кроком йдемо до
-									нових її стандартів
+									Дотримуємось термінів. Гарантуємо стабільність та надійність у виконанні своїх зобов'язань.
 								</p>
 							</div>
 						</div>
@@ -456,8 +452,7 @@
 							<div class="a-privilege__content">
 								<p class="a-privilege__title">Уважні до клієнта</p>
 								<p class="a-privilege__text">
-									Ми постійно покращуємо нашу якість і крок за кроком йдемо до
-									нових її стандартів
+									Уважність до клієнта. Враховуємо та задовільняємо потреби та побажання клієнтів.
 								</p>
 							</div>
 						</div>
@@ -470,8 +465,7 @@
 							<div class="a-privilege__content">
 								<p class="a-privilege__title">Знаходимо рішення</p>
 								<p class="a-privilege__text">
-									Ми знаходимо рішення як це реалізувати навіть у
-									найскладніших проектах, які ніколи не робили
+									Знаходимо рішення. Швидко та ефективно знаходитмо оптимальні рішення.
 								</p>
 							</div>
 						</div>
@@ -702,9 +696,7 @@
 							<li class="info__item">
 								<a class="info__link" href="contacts.html">Контакти</a>
 							</li>
-							<li class="info__item">
-								<a class="info__link" href="calc.html">Калькуоятор металу</a>
-							</li>
+
 						</ul>
 					</div>
 					<div class="info__block info__schedule">
