--- a/services.html
+++ b/services.html
@@ -133,9 +133,6 @@
 							<li class="nav__item">
 								<a href="contacts.html" class="link-hover">Контакти</a>
 							</li>
-							<li class="nav__item">
-								<a href="calc.html" class="link-hover">Калькулятор металу</a>
-							</li>
 						</ul>
 
 						<ul class="nav__list nav__list-social">
@@ -283,7 +280,7 @@
 						<figcaption class="services__figcaption">
 							<div class="services__name">
 								<a class="services__name-link" href="welding.html">
-									Зварювання деталей
+									Зварювальні роботи
 								</a>
 							</div>
 							<div class="services__hover-content">
@@ -431,9 +428,6 @@
 							</li>
 							<li class="info__item">
 								<a class="info__link" href="contacts.html">Контакти</a>
-							</li>
-							<li class="info__item">
-								<a class="info__link" href="calc.html">Калькуоятор металу</a>
 							</li>
 						</ul>
 					</div>
