--- a/welding.html
+++ b/welding.html
@@ -367,9 +367,6 @@
 							<li class="nav__item">
 								<a href="contacts.html" class="link-hover">Контакти</a>
 							</li>
-							<li class="nav__item">
-								<a href="calc.html" class="link-hover">Калькулятор металу</a>
-							</li>
 						</ul>
 
 						<ul class="nav__list nav__list-social">
@@ -413,7 +410,7 @@
 
 			<div class="header__content--container">
 				<div class="header__content header__inner">
-					<h1 class="header__content-title">Зварювання металу</h1>
+					<h1 class="header__content-title">Зварювальні роботи</h1>
 					<p class="header__content-text">
 						Наша компанія надає послуги зі зварювання металу на сучасному обладнанні, за вигідними цінами та у погоджені
 						терміни!
@@ -677,9 +674,6 @@
 							</li>
 							<li class="info__item">
 								<a class="info__link" href="contacts.html">Контакти</a>
-							</li>
-							<li class="info__item">
-								<a class="info__link" href="calc.html">Калькуоятор металу</a>
 							</li>
 						</ul>
 					</div>
