--- a/about-us.html
+++ b/about-us.html
@@ -425,8 +425,7 @@
 							<div class="a-privilege__content">
 								<p class="a-privilege__title">Висока якість</p>
 								<p class="a-privilege__text">
-									Висока якість. Дотримуємось найвищих стандартів якості у всіх аспектах бізнесу та постійно
-									вдосконалюємо процеси.
+									Дотримуємось найвищих стандартів якості у всіх аспектах бізнесу та постійно вдосконалюємо процеси.
 								</p>
 							</div>
 						</div>
@@ -439,7 +438,7 @@
 							<div class="a-privilege__content">
 								<p class="a-privilege__title">Дотримуємося термінів</p>
 								<p class="a-privilege__text">
-									Дотримуємось термінів. Гарантуємо стабільність та надійність у виконанні своїх зобов'язань.
+									Гарантуємо стабільність та надійність у виконанні своїх зобов'язань.
 								</p>
 							</div>
 						</div>
@@ -452,7 +451,7 @@
 							<div class="a-privilege__content">
 								<p class="a-privilege__title">Уважні до клієнта</p>
 								<p class="a-privilege__text">
-									Уважність до клієнта. Враховуємо та задовільняємо потреби та побажання клієнтів.
+									Враховуємо та задовільняємо потреби та побажання клієнтів.
 								</p>
 							</div>
 						</div>
@@ -465,7 +464,7 @@
 							<div class="a-privilege__content">
 								<p class="a-privilege__title">Знаходимо рішення</p>
 								<p class="a-privilege__text">
-									Знаходимо рішення. Швидко та ефективно знаходитмо оптимальні рішення.
+									Швидко та ефективно знаходитмо оптимальні рішення.
 								</p>
 							</div>
 						</div>
