--- a/index.html
+++ b/index.html
@@ -181,28 +181,10 @@
             Металообробка будь-якої складності на замовлення.
           </h1>
           <p class="header__content-text">
-            Сучасні технології обробки металів. Виготовлення виробів з металу
-            будь-якої складності. Європейська якість
+            Ми використовуємо передове обладнання та сучасні методи обробки металу. Це дозволяє нам досягати найвищої
+            якості, ефективності та точності у виробництві. Ваші проекти завжди будуть на крок попереду.
           </p>
         </div>
-        <!-- <div class="header__form-container header__inner">
-        <h3 class="header__form-title">Надіслати запит :</h3>
-
-        <form class="header__form" action="send_mail.php" name="form" method="POST">
-          <input class="input-name" type="text" placeholder="Дмитро" name="name" id="name"
-            data-reg="^([A-Za-z]+|[А-ЩЬЮЯҐЄІЇа-щьюяґєії]+)$" />
-          <input class="input-number" type="text" placeholder="example@gmail.com" name="email" id="email"
-            data-reg="^[-\w.]+@([A-z0-9][-A-z0-9]+\.)+[A-z]{2,4}$" />
-
-
-          <input class="input-number" type="text" placeholder="099 575 55 51" name="phone" id="phone"
-            data-reg="^((\+380|380|0)+([0-9]){9})$" />
-
-
-          <input class="button button-form" type="submit" id="btn_send" value="Надіслати" />
-
-        </form>
-      </div> -->
       </div>
     </div>
   </header>
@@ -214,20 +196,16 @@
           Виконуємо комплексну високоточну металообробку на верстатах з ЧПУ
         </p>
         <p class="section__text">
-          Надаємо комплекс послуг з обробки металу —
-          <a class="preview__link" href="lazer.html">лазерна порізка,</a>
-          <a class="preview__link" href="sheet-bending.html">гнуття деталей,</a>
-          <a class="preview__link" href="welding.html">зварювання,</a>
-          <a class="preview__link" href="dyeing.html">фарбування</a>
-          металевих виробів та форм високої складності. Виробництво деталей
-          для важкої і легкої промисловості, а також складних і відповідальних
-          компонентів для точного обладнання.
+          Забезпечуємо повний спектр послуг з металообробки - від
+          <a class="preview__link" href="lazer.html">лазерної порізки,</a> та гнуття труб і
+          <a class="preview__link" href="sheet-bending.html">листового металу,</a> до
+          <a class="preview__link" href="dyeing.html">порошкового фарбування</a> та покриття пластизолем.
         </p>
-        <p class="section__text">
+        <!-- <p class="section__text">
           Своїм клієнтам ми пропонуємо швидкий попередній прорахунок і
           виконання замовлення, робимо все необхідне, щоб бути кращим
           партнером у сфері виготовлення металевих запчастин і деталей.
-        </p>
+        </p> -->
       </section>
     </div>
 
